--- a/binary-tree/Cargo.toml
+++ b/binary-tree/Cargo.toml
@@ -2,6 +2,7 @@
 name = "binary-tree"
 version = "0.1.0"
 authors = ["You <you@example.com>"]
+edition = "2018"
 
 [dependencies]
-rand = "0.3.14"
+rand = "0.8"
