--- a/http-get/Cargo.toml
+++ b/http-get/Cargo.toml
@@ -2,6 +2,7 @@
 name = "http-get"
 version = "0.1.0"
 authors = ["You <you@example.com>"]
+edition = "2018"
 
 [dependencies]
-reqwest = "0.9"
+reqwest = { version = "0.11", features = ["blocking"] }
